--- a/spring-cloud-api-gateway/src/main/resources/generatorConfig.properties
+++ b/spring-cloud-api-gateway/src/main/resources/generatorConfig.properties
@@ -1,6 +1,6 @@
 classPath=D:\\sourcecode\\mysql-connector-java-5.1.35-bin.jar
-targetProject=D:\\sourcecode\\qk365-cloud-demo\\qk365-provider-book\\src\\main\\java
-targetResource=D:\\sourcecode\\qk365-cloud-demo\\qk365-provider-book\\src\\main\\resources
+targetProject=D:\\sourcecode\\spring-cloud-books\\spring-cloud-provider-book\\src\\main\\java
+targetResource=D:\\sourcecode\\spring-cloud-books\\spring-cloud-provider-book\\src\\main\\resources
 driverClass=com.mysql.jdbc.Driver
 connectionURL=jdbc\:mysql\://localhost\:3306/test?useUnicode\=true&amp;characterEncoding\=UTF-8
 userId=root
