本机环境运行测试，保证顺利执行

--- a/spring-cloud-consumer-book/src/main/resources/application.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port=${dev.server.port}
 spring.application.name=${dev.spring.application.name}
 #\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
 eureka.instance.hostname=${dev.eureka.instance.hostname}
+eureka.instance.prefer-ip-address=${dev.eureka.instance.prefer-ip-address}
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone=${dev.eureka.client.serviceUrl.defaultZone}
 #ribbon.eureka.enabled=true
