--- a/spring-cloud-api-gateway/src/main/resources/application-test.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application-test.properties
@@ -20,6 +20,7 @@ mybatis.mapperLocations=${test.mybatis.mapperLocations}
 mybatis.typeAliasesPackage=${test.mybatis.typeAliasesPackage}
 #\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
 eureka.instance.hostname=${test.eureka.instance.hostname}
+eureka.instance.prefer-ip-address=${test.eureka.instance.prefer-ip-address}
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone=${test.eureka.client.serviceUrl.defaultZone}
 #eureka.instance.non-secure-port=8003
