--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -21,6 +21,7 @@ mybatis.mapperLocations=${dev.mybatis.mapperLocations}
 mybatis.typeAliasesPackage=${dev.mybatis.typeAliasesPackage}
 #\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
 eureka.instance.hostname=${dev.eureka.instance.hostname}
+eureka.instance.prefer-ip-address=${dev.eureka.instance.prefer-ip-address}
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone=${dev.eureka.client.serviceUrl.defaultZone}
 #eureka.instance.non-secure-port=8003
