--- a/spring-cloud-consumer-book/src/main/resources/application-test.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application-test.properties
@@ -4,6 +4,7 @@ server.port=${test.server.port}
 spring.application.name=${test.spring.application.name}
 #\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
 eureka.instance.hostname=${test.eureka.instance.hostname}
+eureka.instance.prefer-ip-address=${test.eureka.instance.prefer-ip-address}
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone=${test.eureka.client.serviceUrl.defaultZone}
 #ribbon.eureka.enabled=true
