--- a/spring-cloud-aggregator/src/main/resources/application-test.properties
+++ b/spring-cloud-aggregator/src/main/resources/application-test.properties
@@ -10,3 +10,7 @@ turbine.aggregator.clusterConfig=${test.turbine.aggregator.clusterConfig}
 ### \u914D\u7F6EEureka\u4E2D\u7684serviceId\u5217\u8868\uFF0C\u8868\u660E\u76D1\u63A7\u54EA\u4E9B\u670D\u52A1
 turbine.appConfig=${test.turbine.appConfig}
 turbine.clusterNameExpression=${test.turbine.clusterNameExpression}
+#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
