--- a/spring-cloud-api-gateway/src/main/resources/application-test.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application-test.properties
@@ -1,5 +1,5 @@
 #\u81EA\u5B9A\u4E49\u7F51\u5173\u8DEF\u5F84
-zuul.routes.qk365-microservice-books.path=${test.zuul.routes.qk365-microservice-books.path}
+zuul.routes.microservice-books.path=${test.zuul.routes.microservice-books.path}
 #\u5B9E\u4F8B\u7AEF\u53E3
 server.port=${test.server.port}
 #\u5E94\u7528\u7A0B\u5E8F\u540D
@@ -25,3 +25,7 @@ eureka.instance.prefer-ip-address=${test.eureka.instance.prefer-ip-address}
 eureka.client.serviceUrl.defaultZone=${test.eureka.client.serviceUrl.defaultZone}
 #eureka.instance.non-secure-port=8003
 eureka.instance.appname=${test.eureka.instance.appname}
+#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
