--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #\u81EA\u5B9A\u4E49\u7F51\u5173\u8DEF\u5F84
-zuul.routes.qk365-microservice-books.path=${dev.zuul.routes.qk365-microservice-books.path}
+zuul.routes.microservice-books.path=${dev.zuul.routes.microservice-books.path}
 #zuul.routes.*,*\u8FD9\u91CC\u7684\u503C\u53EF\u4EE5\u968F\u4FBF\u5199\uFF0C\u53EA\u8981\u4FDD\u8BC1\u5728zuul\u4E0A\u9762\u552F\u4E00\u5373\u53EF
 #\u5B9E\u4F8B\u7AEF\u53E3
 server.port=${dev.server.port}
@@ -26,3 +26,7 @@ eureka.instance.prefer-ip-address=${dev.eureka.instance.prefer-ip-address}
 eureka.client.serviceUrl.defaultZone=${dev.eureka.client.serviceUrl.defaultZone}
 #eureka.instance.non-secure-port=8003
 eureka.instance.appname=${dev.eureka.instance.appname}
+#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
