--- a/spring-cloud-consumer-book/src/main/resources/application.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application.properties
@@ -7,5 +7,8 @@ eureka.instance.hostname=${dev.eureka.instance.hostname}
 eureka.instance.prefer-ip-address=${dev.eureka.instance.prefer-ip-address}
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone=${dev.eureka.client.serviceUrl.defaultZone}
-#ribbon.eureka.enabled=true
+#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
 
