--- a/spring-cloud-provider-book/src/main/resources/application.properties
+++ b/spring-cloud-provider-book/src/main/resources/application.properties
@@ -23,3 +23,7 @@ eureka.client.serviceUrl.defaultZone=${dev.eureka.client.serviceUrl.defaultZone}
 #eureka.instance.non-secure-port=8003
 eureka.instance.appname=${dev.eureka.instance.appname}
 eureka.instance.prefer-ip-address=${dev.eureka.instance.prefer-ip-address}
+#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
