--- a/spring-cloud-service-discovery/src/main/resources/application-test.properties
+++ b/spring-cloud-service-discovery/src/main/resources/application-test.properties
@@ -10,3 +10,7 @@ eureka.client.registerWithEureka=${test.eureka.client.registerWithEureka}
 eureka.client.fetchRegistry=${test.eureka.client.fetchRegistry}
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone=${test.eureka.client.serviceUrl.defaultZone}
+#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
