--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #\u5B9E\u4F8B\u7AEF\u53E3
-server.port=8044
+server.port=8000
 #\u5E94\u7528\u7A0B\u5E8F\u540D
 spring.profiles.active=subversion
-spring.cloud.config.server.svn.uri=svn://xxx.xxx.xxx.xxx/qk365-microservices/
+spring.cloud.config.server.svn.uri=svn://xxx.xxx.xxx.xxx/yyy/
 spring.cloud.config.server.default-label=docs
-spring.cloud.config.server.svn.username=xxx
-spring.cloud.config.server.svn.password=yyy
+spring.cloud.config.server.svn.username=zzzz
+spring.cloud.config.server.svn.password=zzz
 #\u5173banner
 spring.main.banner-mode=off
 #\u63A7\u5236\u53F0\u989C\u8272\u663E\u793A
