--- a/spring-cloud-api-gateway/src/main/resources/jwt.properties
+++ b/spring-cloud-api-gateway/src/main/resources/jwt.properties
@@ -1,4 +1,8 @@
-audience.clientId=${jwt.audience.clientId}
-audience.base64Secret=${jwt.audience.base64Secret}
-audience.name=${jwt.audience.name}
-audience.expiresSecond=${jwt.audience.expiresSecond}
+#audience.clientId=${jwt.audience.clientId}
+#audience.base64Secret=${jwt.audience.base64Secret}
+#audience.name=${jwt.audience.name}
+#audience.expiresSecond=${jwt.audience.expiresSecond}
+jwt.audience.clientId=098f6bcd4621d373cade4e832627b4f6
+jwt.audience.base64Secret=MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
+jwt.audience.name=restapiuser
+jwt.audience.expiresSecond=7200
