--- a/spring-cloud-config-server/src/main/resources/application.properties
+++ b/spring-cloud-config-server/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 server.port=8000
 #\u5E94\u7528\u7A0B\u5E8F\u540D
 spring.profiles.active=subversion
-spring.cloud.config.server.svn.uri=svn://xxx.xxx.xxx.xxx/yyy/
+spring.cloud.config.server.svn.uri=svn://192.168.1.193/qk365-microservices/
 spring.cloud.config.server.default-label=docs
-spring.cloud.config.server.svn.username=zzzz
-spring.cloud.config.server.svn.password=zzz
+spring.cloud.config.server.svn.username=wujunshen
+spring.cloud.config.server.svn.password=wujunshen
 #\u5173banner
 spring.main.banner-mode=off
 #\u63A7\u5236\u53F0\u989C\u8272\u663E\u793A
