--- a/spring-cloud-provider-book/src/main/resources/generatorConfig.properties
+++ b/spring-cloud-provider-book/src/main/resources/generatorConfig.properties
@@ -1,10 +1,10 @@
-classPath=D:\\sourcecode\\mysql-connector-java-5.1.35-bin.jar
-targetProject=D:\\sourcecode\\spring-cloud-books\\spring-cloud-provider-book\\src\\main\\java
-targetResource=D:\\sourcecode\\spring-cloud-books\\spring-cloud-provider-book\\src\\main\\resources
+classPath=/sourcecode/mysql-connector-java-5.1.35-bin.jar
+targetProject=/sourcecode/spring-cloud-books/spring-cloud-provider-book/src/main/java
+targetResource=/sourcecode/spring-cloud-books/spring-cloud-provider-book/src/main/resources
 driverClass=com.mysql.jdbc.Driver
-connectionURL=jdbc\:mysql\://localhost\:3306/test?useUnicode\=true&amp;characterEncoding\=UTF-8
+connectionURL=jdbc:mysql://172.104.119.101:3306/test?useUnicode=true&amp;characterEncoding=UTF-8
 userId=root
-password=root
+password=whatsfuck1979
 schema=test
 
 modelPackage=com.wujunshen.entity
