--- a/spring-cloud-consumer-book/src/main/resources/application.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application.properties
@@ -1,14 +1,23 @@
+##\u5B9E\u4F8B\u7AEF\u53E3
+#server.port=${dev.server.port}
+##\u5E94\u7528\u7A0B\u5E8F\u540D
+#spring.application.name=${dev.spring.application.name}
+##\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
+#eureka.instance.hostname=${dev.eureka.instance.hostname}
+#eureka.instance.prefer-ip-address=${dev.eureka.instance.prefer-ip-address}
+##\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
+#eureka.client.serviceUrl.defaultZone=${dev.eureka.client.serviceUrl.defaultZone}
+##\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+#info.app.name=@project.name@
+#info.app.description=@project.description@
+#info.app.version=@project.version@
 #\u5B9E\u4F8B\u7AEF\u53E3
-server.port=${dev.server.port}
+dev.server.port=8004
 #\u5E94\u7528\u7A0B\u5E8F\u540D
-spring.application.name=${dev.spring.application.name}
+dev.spring.application.name=microservice-consumer-books
 #\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
-eureka.instance.hostname=${dev.eureka.instance.hostname}
-eureka.instance.prefer-ip-address=${dev.eureka.instance.prefer-ip-address}
+dev.eureka.instance.hostname=consumer
+dev.eureka.instance.prefer-ip-address=true
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
-eureka.client.serviceUrl.defaultZone=${dev.eureka.client.serviceUrl.defaultZone}
-#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
-info.app.name=@project.name@
-info.app.description=@project.description@
-info.app.version=@project.version@
+dev.eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
 
