--- a/spring-cloud-service-discovery/src/main/resources/application.properties
+++ b/spring-cloud-service-discovery/src/main/resources/application.properties
@@ -1,16 +1,28 @@
+##\u5E94\u7528\u7A0B\u5E8F\u540D
+#spring.application.name=${spring.application.name}
+##\u5B9E\u4F8B\u7AEF\u53E3
+#server.port=${server.port}
+##\u5B9E\u4F8Bcontextpath
+#server.context-path=${server.context-path}
+##\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
+#eureka.instance.hostname=${eureka.instance.hostname}
+#eureka.client.registerWithEureka=${eureka.client.registerWithEureka}
+#eureka.client.fetchRegistry=${eureka.client.fetchRegistry}
+##\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
+#eureka.client.serviceUrl.defaultZone=${eureka.client.serviceUrl.defaultZone}
+##\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+#info.app.name=@project.name@
+#info.app.description=@project.description@
+#info.app.version=@project.version@
 #\u5E94\u7528\u7A0B\u5E8F\u540D
-spring.application.name=${dev.spring.application.name}
+spring.application.name=microservice-discovery
 #\u5B9E\u4F8B\u7AEF\u53E3
-server.port=${dev.server.port}
+server.port=8001
 #\u5B9E\u4F8Bcontextpath
-server.context-path=${dev.server.context-path}
+server.context-path=/discovery
 #\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
-eureka.instance.hostname=${dev.eureka.instance.hostname}
-eureka.client.registerWithEureka=${dev.eureka.client.registerWithEureka}
-eureka.client.fetchRegistry=${dev.eureka.client.fetchRegistry}
+eureka.instance.hostname=discovery
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
-eureka.client.serviceUrl.defaultZone=${dev.eureka.client.serviceUrl.defaultZone}
-#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
-info.app.name=@project.name@
-info.app.description=@project.description@
-info.app.version=@project.version@
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/discovery/eureka/
