eureka服务注册中心重新改为无配置中心形式，且以jar包形式打包

--- a/spring-cloud-service-discovery/pom.xml
+++ b/spring-cloud-service-discovery/pom.xml
@@ -5,7 +5,7 @@
 
     <artifactId>spring-cloud-service-discovery</artifactId>
     <version>1.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>spring-cloud-service-discovery</name>
     <description>service discovery using eureka</description>
@@ -29,10 +29,6 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
@@ -53,8 +49,8 @@
             <artifactId>hal-browser</artifactId>
         </dependency>
         <!--<dependency>-->
-            <!--<groupId>org.springframework.cloud</groupId>-->
-            <!--<artifactId>spring-cloud-config-client</artifactId>-->
+        <!--<groupId>org.springframework.cloud</groupId>-->
+        <!--<artifactId>spring-cloud-config-client</artifactId>-->
         <!--</dependency>-->
     </dependencies>
 
