--- a/spring-cloud-service-discovery/src/main/resources/application.properties
+++ b/spring-cloud-service-discovery/src/main/resources/application.properties
@@ -22,3 +22,7 @@ eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 #\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/discovery/eureka/
+#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
