--- a/spring-cloud-api-gateway/pom.xml
+++ b/spring-cloud-api-gateway/pom.xml
@@ -102,6 +102,11 @@
             <groupId>org.webjars</groupId>
             <artifactId>hal-browser</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-configuration-processor</artifactId>
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
