增加作为spring-boot-admin客户端的配置

--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -34,6 +34,8 @@ info.app.version=@project.version@
 server.port=8003
 #\u5E94\u7528\u7A0B\u5E8F\u540D
 spring.application.name=api-gateway
+spring.boot.admin.url=http://localhost:8009
+logging.path=/Users/wujunshen/Downloads
 #\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
 eureka.instance.hostname=gateway
 eureka.instance.appname=api-gateway
