provider-book子项目重构

--- a/spring-cloud-provider-book/src/main/resources/application.properties
+++ b/spring-cloud-provider-book/src/main/resources/application.properties
@@ -16,7 +16,7 @@ mybatis.typeAliasesPackage=com.wujunshen.entity
 eureka.instance.hostname=books
 eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka
 eureka.instance.appname=microservice-books
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=false
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
@@ -25,3 +25,6 @@ spring.rabbitmq.host=172.104.119.101
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=wujunshen
 spring.rabbitmq.password=wujunshen
+spring.boot.admin.url=http://localhost:8009
+management.security.enabled=false
+logging.path=/Users/wujunshen/Downloads
