--- a/spring-cloud-provider-book/pom.xml
+++ b/spring-cloud-provider-book/pom.xml
@@ -98,6 +98,15 @@
             <artifactId>httpcore</artifactId>
             <version>4.4</version>
         </dependency>
+        <dependency>
+            <groupId>de.codecentric</groupId>
+            <artifactId>spring-boot-admin-starter-client</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-core</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
