--- a/spring-cloud-aggregator/pom.xml
+++ b/spring-cloud-aggregator/pom.xml
@@ -5,7 +5,7 @@
 
     <artifactId>spring-cloud-aggregator</artifactId>
     <version>1.0</version>
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>spring-cloud-aggregator</name>
     <description>Demo-aggregator simlar source to be monitored</description>
@@ -25,7 +25,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
