--- a/spring-cloud-aggregator/src/main/resources/application.properties
+++ b/spring-cloud-aggregator/src/main/resources/application.properties
@@ -4,9 +4,14 @@ info.app.version=@project.version@
 server.port=8006
 spring.application.name=aggregator
 security.basic.enabled=false
-eureka.client.serviceUrl.defaultZone=http://localhost:8001/discovery/eureka/
-eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=aggregator
+eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
+eureka.instance.prefer-ip-address=false
 ribbon.eureka.enabled=true
 turbine.aggregator.clusterConfig=default
-turbine.appConfig=microservice-consumer-books
+turbine.appConfig=api-gateway
 turbine.clusterNameExpression=new String("default")
+spring.boot.admin.url=http://admin:8009
+management.security.enabled=false
+logging.path=/Users/wujunshen/Downloads
+logging.file=${logging.path}/microservice-aggregator.log
