--- a/spring-cloud-consumer-book/src/main/resources/application.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application.properties
@@ -31,7 +31,12 @@ spring.redis.pool.min-idle=0
 spring.redis.pool.max-wait=-1
 #spring.redis.cluster.nodes=ip1:port1,ip2:port2
 #spring.redis.cluster.max-redirects=6
-spring.boot.admin.url=http://localhost:8009
+spring.sleuth.sampler.percentage=1.0
+spring.rabbitmq.host=172.104.119.101
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=wujunshen
+spring.rabbitmq.password=wujunshen
+spring.boot.admin.url=http://admin:8009
 management.security.enabled=false
 logging.path=/Users/wujunshen/Downloads
-
+logging.file=${logging.path}/microservice-consumer-books.log
