--- a/spring-cloud-admin-server/src/main/resources/application.properties
+++ b/spring-cloud-admin-server/src/main/resources/application.properties
@@ -1,28 +1,20 @@
 spring.main.banner-mode=off
 spring.output.ansi.enabled=ALWAYS
 server.port=8009
-spring.application.name=spring-cloud-admin-server
-spring.boot.admin.url=http://localhost:${server.port}
+spring.application.name=admin-server
+spring.boot.admin.url=http://admin:8009
 spring.jackson.serialization.indent_output=true
-endpoints.health.sensitive=false
-spring.cloud.config.enabled=false
 spring.profiles.active=secure
-#\u8BE5Eureka\u5B9E\u4F8B\u4E3B\u673A\u540D
 eureka.instance.hostname=admin
-##\u6CE8\u518C\u4E2D\u5FC3\u5730\u5740
 eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka
-eureka.instance.prefer-ip-address=true
-#Instance ID\u8BBE\u7F6E\u6210IP:\u7AEF\u53E3\u7684\u5F62\u5F0F
-eureka.instance.instance-id=${spring.cloud.client.ipAddress}:${server.port}
-#\u89E3\u51B3eureka\u6CE8\u518C\u670D\u52A1\u901F\u5EA6\u6162\u7684\u95EE\u9898\uFF0C\u9ED8\u8BA4\u662F30\uFF08\u5355\u4F4D\uFF1A\u79D2\uFF09
+eureka.instance.prefer-ip-address=false
 eureka.instance.leaseRenewalIntervalInSeconds=10
 eureka.client.registry-fetch-interval-seconds=5
-eureka.instance.appname=spring-cloud-admin-server
-eureka.client.registerWithEureka=false
+eureka.instance.appname=admin-server
+eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
-#spring.jackson.serialization.indent-output=true
-management.security.enabled=true
-#\u67E5\u770Binfo\u4FE1\u606F\u914D\u7F6E
+endpoints.health.sensitive=true
+management.security.enabled=false
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
@@ -35,4 +27,4 @@ spring.boot.admin.client.metadata.user.name=${security.user.name}
 spring.boot.admin.client.metadata.user.password=${security.user.password}
 spring.boot.admin.routes.endpoints=env,metrics,trace,dump,jolokia,info,configprops,trace,logfile,refresh,flyway,liquibase,heapdump,loggers,auditevents,hystrix.stream
 spring.boot.admin.turbine.clusters=default
-spring.boot.admin.turbine.url=http://localhost:8006/turbine.stream
+spring.boot.admin.turbine.url=http://aggregator:8006/turbine.stream
