--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -3,9 +3,6 @@ info.app.description=@project.description@
 info.app.version=@project.version@
 server.port=8003
 spring.application.name=api-gateway
-spring.boot.admin.url=http://localhost:8009
-management.security.enabled=false
-logging.path=/Users/wujunshen/Downloads
 eureka.instance.hostname=gateway
 eureka.instance.appname=api-gateway
 eureka.instance.prefer-ip-address=false
@@ -28,3 +25,21 @@ audience.clientId=098f6bcd4621d373cade4e832627b4f6
 audience.base64Secret=MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
 audience.name=restapiuser
 audience.expiresSecond=7200
+spring.sleuth.sampler.percentage=1.0
+spring.rabbitmq.host=172.104.119.101
+spring.rabbitmq.port=5672
+spring.rabbitmq.username=wujunshen
+spring.rabbitmq.password=wujunshen
+spring.boot.admin.url=http://admin:8009
+management.security.enabled=false
+logging.path=/Users/wujunshen/Downloads
+logging.file=${logging.path}/microservice-api-gateway.log
+spring.redis.database=0
+spring.redis.host=172.104.119.101
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.timeout=20000
+spring.redis.pool.max-active=8
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-wait=-1
