--- a/spring-cloud-monitor-dashboard/src/main/resources/application.properties
+++ b/spring-cloud-monitor-dashboard/src/main/resources/application.properties
@@ -1,5 +1,11 @@
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
-spring.application.name=dashboard
+spring.application.name=microservice-monitor
 server.port=8005
+eureka.instance.hostname=monitor
+eureka.instance.prefer-ip-address=false
+eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
+eureka.instance.appname=microservice-monitor
+logging.path=/Users/wujunshen/Downloads
+logging.file=${logging.path}/microservice-monitor.log
