--- a/spring-cloud-provider-book/src/main/resources/application.properties
+++ b/spring-cloud-provider-book/src/main/resources/application.properties
@@ -25,6 +25,16 @@ spring.rabbitmq.host=172.104.119.101
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=wujunshen
 spring.rabbitmq.password=wujunshen
-spring.boot.admin.url=http://localhost:8009
+spring.boot.admin.url=http://admin:8009
 management.security.enabled=false
 logging.path=/Users/wujunshen/Downloads
+logging.file=${logging.path}/microservice-books.log
+spring.redis.database=0
+spring.redis.host=172.104.119.101
+spring.redis.port=6379
+spring.redis.password=
+spring.redis.timeout=20000
+spring.redis.pool.max-active=8
+spring.redis.pool.max-idle=8
+spring.redis.pool.min-idle=0
+spring.redis.pool.max-wait=-1
