增加过滤器RedisFilter，将缓存存放读取统一管理，且重构了各子项目部分代码（没有使用spring-cache的原因是token和数据库无关。没有使用aop注解原因是会调用网关获取新token的http接口，无法再切面类中进行管理）

--- a/spring-cloud-consumer-book/src/main/resources/application.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application.properties
@@ -38,3 +38,4 @@ spring.rabbitmq.username=wujunshen
 spring.rabbitmq.password=wujunshen
 spring.boot.admin.url=http://admin:8009
 management.security.enabled=false
+audience.base64Secret=MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
