增加mysql链接里ssl配置

--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -8,9 +8,14 @@ eureka.instance.appname=api-gateway
 eureka.instance.prefer-ip-address=false
 eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
 zuul.routes.microservice-books.path=/api-gateway/v1/**
-hystrix.command.default.execution.timeout.enabled=false
+# Maximum amount of worker threads.
+server.tomcat.max-threads=128
+# Minimum amount of worker threads.
+server.tomcat.min-spare-threads=64
+zuul.host.maxTotalConnections=100000
+zuul.host.maxPerRouteConnections=10000
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=whatsfuck1979
 spring.datasource.hikari.connection-test-query=select 1 from dual
