--- a/spring-cloud-provider-book/src/main/resources/application.properties
+++ b/spring-cloud-provider-book/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8002
 spring.application.name=microservice-books
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=whatsfuck1979
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
