--- a/spring-cloud-common/src/main/resources/application.properties
+++ b/spring-cloud-common/src/main/resources/application.properties
@@ -2,7 +2,7 @@ info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=whatsfuck1979
 spring.datasource.hikari.connection-test-query=select 1 from dual
