--- a/spring-cloud-consumer-book/src/main/resources/application.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application.properties
@@ -8,7 +8,7 @@ eureka.instance.prefer-ip-address=false
 eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
 eureka.instance.appname=microservice-consumer-books
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8
+spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=whatsfuck1979
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
